# chess_engine_rust

./: Cargo.toml
src/: evaluate.rs  main.rs
src/depricated/: piece-depricated.rs  update.rs
src/uses/: constants.rs  debug_tools.rs  evaluate.rs  evaluate_pawn_structure.rs  find_moves.rs  importer.rs  io.rs  minimax.rs  mod.rs  search.rs  zobrist_hash.rs
