[package]
name = "chess1"
version = "0.1.0"
edition = "2021"

[dependencies]
csv="1.3.1"
rand = "0.9.0"
num_cpus = "1.16.0"

[build]
rustflags = [
    "-A dead_code",          # Allow dead code
    "-A unused_variables",   # Allow unused variables
    "-A unused_imports"      # Allow unused imports
]